--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="register.html" class="cta-button">Start Learning Today</a>
             </div>
             <div class="hero-image">
-                <img src="https://pixabay.com/get/g8d33e3646c3ff252b2929f190f6c12d8b2219b63a6270ba93d9405a1349e9299f1974ffc03d58f13a69f039f38c84e47ed95787dfc1357e183d389904a05b64e_1280.jpg" alt="African History Education" loading="lazy">
+                <img src="hero.JPG" alt="African History Education" loading="lazy">
             </div>
         </section>
 
@@ -77,21 +77,21 @@
                 <h2>What You'll Learn</h2>
                 <div class="preview-grid">
                     <div class="preview-card">
-                        <img src="https://pixabay.com/get/g3607a34b2d3be67160313871abf80c49bd0dce6b33dae52ec3b2dfc95694cf5ec93bda3b72b80dab87e996ae6c6773e02e5a4b8426bb8d4bed14c2be825e2605_1280.jpg" alt="African Historical Leaders" loading="lazy">
+                        <img src="ancient.JPG" alt="African Historical Leaders" loading="lazy">
                         <div class="preview-content">
                             <h3>Ancient African Kingdoms</h3>
                             <p>Discover the great empires of Mali, Ghana, Songhai, and Egypt that shaped African civilization.</p>
                         </div>
                     </div>
                     <div class="preview-card">
-                        <img src="https://pixabay.com/get/g5f3ea219ddfbf66c1bb89bb335ec38512ba7ac819f381125d03349631be66e28aa42b1b87e48eb0721510e5f42c6d892c6c4bd4d5ca55fdbe192c5b78165100a_1280.jpg" alt="Educational Platform" loading="lazy">
+                        <img src="colonial.JPG" alt="Educational Platform" loading="lazy">
                         <div class="preview-content">
                             <h3>Colonial Period & Independence</h3>
                             <p>Understand the impact of colonialism and the heroic struggles for independence across Africa.</p>
                         </div>
                     </div>
                     <div class="preview-card">
-                        <img src="https://pixabay.com/get/gda374e8af0e7f5c6986f475e0ceed94e21fd180fb1e61f01bc8f931879d737c31c0b39f55868a7973362f9780738b3b8799b372a67f0d8685837c9f0fe3e1326_1280.jpg" alt="Modern Africa" loading="lazy">
+                        <img src="leader.JPG" loading="lazy">
                         <div class="preview-content">
                             <h3>Modern African Leaders</h3>
                             <p>Study the lives and achievements of contemporary African leaders and their global impact.</p>
