--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="register.html" class="cta-button">Start Learning Today</a>
             </div>
             <div class="hero-image">
-                <img src="hero.JPG" alt="African History Education" loading="lazy">
+                <img src="hero.jpeg" alt="African History Education" loading="lazy">
             </div>
         </section>
 
